<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/ivBg"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:src="@drawable/pagio" />

    <View
        android:id="@+id/ViewGradiet"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignBottom="@id/ivBg"
        android:background="@drawable/shadowview" />


    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textColor="#4CAF50"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="Fajr" />
    <ImageView
        android:id="@+id/loc"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:src="@drawable/ic_add_location_black_24dp"
        android:layout_alignParentEnd="true"

        />

    <TextClock
        android:id="@+id/tvClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTime"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/tvClock"
        android:format12Hour="hh:mm:ss a"
        android:textColor="#4CAF50"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:text="04:29 AM" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvClock"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/tvLocation"
        android:textColor="#4CAF50"
        android:textStyle="bold"
        android:text="Dayeuh, Jonggol Bogor" />

    <TextView
        android:id="@+id/tvCalender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvLocation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textColor="#4CAF50"
        android:text="17 September 2019" />

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="30dp">

        <RelativeLayout
            android:id="@+id/scedhule"
            android:layout_width="384dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/prayScedule"
                android:textColor="#689F38"
                android:textSize="24sp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>



        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/card"
            android:visibility="visible">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/card">


            <RelativeLayout
                android:id="@+id/layFajr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="30dp">

                <ImageView
                    android:id="@+id/ivIconFajr"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/descriptionImage"
                    android:src="@drawable/sun" />

                <TextView
                    android:id="@+id/fajr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_toEndOf="@id/ivIconFajr"
                    android:text="@string/Fajr"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    />

                <TextView
                    android:id="@+id/tvFajr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="16dp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    tools:text="04:25 AM" />


            </RelativeLayout>

            <View
                android:id="@+id/lineFajr"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/layFajr"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="#DFDFDF" />

            <RelativeLayout
                android:id="@+id/laySunrise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lineFajr"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp">

                <ImageView
                    android:id="@+id/ivIconSunrise"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/descriptionImage"
                    android:src="@drawable/sun" />

                <TextView
                    android:id="@+id/sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_toEndOf="@id/ivIconSunrise"
                    android:text="@string/Sunrise"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvSunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="16dp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    tools:text="05:25 AM" />

            </RelativeLayout>

            <View
                android:id="@+id/lineSunrise"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/laySunrise"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="#DFDFDF" />

            <RelativeLayout
                android:id="@+id/layDhuhr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lineSunrise"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp">

                <ImageView
                    android:id="@+id/ivIconDhuhr"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/descriptionImage"
                    android:src="@drawable/sun" />

                <TextView
                    android:id="@+id/dhuhr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_toEndOf="@id/ivIconDhuhr"
                    android:text="@string/Dhuhr"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvDhuhr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="16dp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    tools:text="11:25 AM" />

            </RelativeLayout>

            <View
                android:id="@+id/lineDhuhr"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/layDhuhr"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="#DFDFDF" />

            <RelativeLayout
                android:id="@+id/layAsr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lineDhuhr"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp">

                <ImageView
                    android:id="@+id/ivIconAsr"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/descriptionImage"
                    android:src="@drawable/sun" />

                <TextView
                    android:id="@+id/asr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_toEndOf="@id/ivIconAsr"
                    android:text="@string/asar"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvAsr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="16dp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    tools:text="02:25 PM" />

            </RelativeLayout>

            <View
                android:id="@+id/lineAsr"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/layAsr"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="#DFDFDF" />

            <RelativeLayout
                android:id="@+id/layMaghrib"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lineAsr"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp">

                <ImageView
                    android:id="@+id/ivIconMaghrib"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/descriptionImage"
                    android:src="@drawable/sun" />

                <TextView
                    android:id="@+id/maghrib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_toEndOf="@id/ivIconMaghrib"
                    android:text="@string/magrib"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvMaghrib"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="16dp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    tools:text="05:25 AM" />

            </RelativeLayout>

            <View
                android:id="@+id/lineMaghrib"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@id/layMaghrib"
                android:layout_marginStart="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:background="#DFDFDF" />

            <RelativeLayout
                android:id="@+id/layIsha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lineMaghrib"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp">

                <ImageView
                    android:id="@+id/ivIconIsha"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/descriptionImage"
                    android:src="@drawable/sun" />

                <TextView
                    android:id="@+id/isya"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_toEndOf="@id/ivIconIsha"
                    android:text="@string/isyaa"
                    android:textAlignment="center"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tvIsha"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="16dp"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    tools:text="07:25 AM" />
            </RelativeLayout>

    </RelativeLayout>

        </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BadConnection"
        android:layout_below="@id/card"
        android:layout_centerInParent="true"
        android:layout_marginTop="24dp"
        android:visibility="gone"/>



</RelativeLayout>
